quantum-ide/quantum-ide-backend/src/main/java/com/example/quantum_ide_backend/controller/QuantumParser.java
// $ANTLR 3.5.1 C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g 2025-11-03 15:14:38

package com.example.quantum_ide_backend.controller;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class QuantumParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARROW", "ASSIGN", "BIT", 
		"BREAK", "CCX", "CHAR", "CNOT", "COMMA", "COMMENT", "CONTINUE", "COS", 
		"CSWAP", "CX", "CY", "CZ", "DIV", "ELSE", "EQ", "ESC_SEQ", "EULER", "EXP", 
		"EXPONENT", "FALSE", "FLOAT", "FLOATTYPE", "FOR", "FUNC", "GATE", "GE", 
		"GT", "H", "HEX_DIGIT", "ID", "IF", "INT", "INTTYPE", "ISWAP", "LBRACE", 
		"LBRACK", "LE", "LOG", "LPAREN", "LT", "MEASURE", "MINUS", "MOD", "NEQ", 
		"NOT", "OCTAL_ESC", "ONE", "OR", "PI", "PLUS", "POW", "QUBIT", "RBRACE", 
		"RBRACK", "REGISTER", "RESET", "RETURN", "RPAREN", "RX", "RY", "RZ", "S", 
		"SEMI", "SIN", "SQRT", "SQRT2", "STRING", "SWAP", "T", "TAN", "TIMES", 
		"TRUE", "U1", "U2", "U3", "UNICODE_ESC", "WHILE", "WS", "X", "Y", "Z", 
		"ZERO", "BLOCK", "FUNCTION_CALL", "FUNC_DECL", "GATE_APPLY", "GATE_DECL", 
		"PARAMS", "PROGRAM"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARROW=5;
	public static final int ASSIGN=6;
	public static final int BIT=7;
	public static final int BREAK=8;
	public static final int CCX=9;
	public static final int CHAR=10;
	public static final int CNOT=11;
	public static final int COMMA=12;
	public static final int COMMENT=13;
	public static final int CONTINUE=14;
	public static final int COS=15;
	public static final int CSWAP=16;
	public static final int CX=17;
	public static final int CY=18;
	public static final int CZ=19;
	public static final int DIV=20;
	public static final int ELSE=21;
	public static final int EQ=22;
	public static final int ESC_SEQ=23;
	public static final int EULER=24;
	public static final int EXP=25;
	public static final int EXPONENT=26;
	public static final int FALSE=27;
	public static final int FLOAT=28;
	public static final int FLOATTYPE=29;
	public static final int FOR=30;
	public static final int FUNC=31;
	public static final int GATE=32;
	public static final int GE=33;
	public static final int GT=34;
	public static final int H=35;
	public static final int HEX_DIGIT=36;
	public static final int ID=37;
	public static final int IF=38;
	public static final int INT=39;
	public static final int INTTYPE=40;
	public static final int ISWAP=41;
	public static final int LBRACE=42;
	public static final int LBRACK=43;
	public static final int LE=44;
	public static final int LOG=45;
	public static final int LPAREN=46;
	public static final int LT=47;
	public static final int MEASURE=48;
	public static final int MINUS=49;
	public static final int MOD=50;
	public static final int NEQ=51;
	public static final int NOT=52;
	public static final int OCTAL_ESC=53;
	public static final int ONE=54;
	public static final int OR=55;
	public static final int PI=56;
	public static final int PLUS=57;
	public static final int POW=58;
	public static final int QUBIT=59;
	public static final int RBRACE=60;
	public static final int RBRACK=61;
	public static final int REGISTER=62;
	public static final int RESET=63;
	public static final int RETURN=64;
	public static final int RPAREN=65;
	public static final int RX=66;
	public static final int RY=67;
	public static final int RZ=68;
	public static final int S=69;
	public static final int SEMI=70;
	public static final int SIN=71;
	public static final int SQRT=72;
	public static final int SQRT2=73;
	public static final int STRING=74;
	public static final int SWAP=75;
	public static final int T=76;
	public static final int TAN=77;
	public static final int TIMES=78;
	public static final int TRUE=79;
	public static final int U1=80;
	public static final int U2=81;
	public static final int U3=82;
	public static final int UNICODE_ESC=83;
	public static final int WHILE=84;
	public static final int WS=85;
	public static final int X=86;
	public static final int Y=87;
	public static final int Z=88;
	public static final int ZERO=89;
	public static final int BLOCK=90;
	public static final int FUNCTION_CALL=91;
	public static final int FUNC_DECL=92;
	public static final int GATE_APPLY=93;
	public static final int GATE_DECL=94;
	public static final int PARAMS=95;
	public static final int PROGRAM=96;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public QuantumParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public QuantumParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return QuantumParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:18:1: program : ( statement )+ EOF -> ^( PROGRAM ( statement )+ ) ;
	public final QuantumParser.program_return program() throws RecognitionException {
		QuantumParser.program_return retval = new QuantumParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope statement1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");

		try {
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:19:5: ( ( statement )+ EOF -> ^( PROGRAM ( statement )+ ) )
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:19:7: ( statement )+ EOF
			{
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:19:7: ( statement )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BIT && LA1_0 <= CNOT)||(LA1_0 >= CONTINUE && LA1_0 <= CSWAP)||(LA1_0 >= EULER && LA1_0 <= EXP)||(LA1_0 >= FALSE && LA1_0 <= FLOAT)||(LA1_0 >= FOR && LA1_0 <= GATE)||LA1_0==H||(LA1_0 >= ID && LA1_0 <= INT)||LA1_0==ISWAP||(LA1_0 >= LOG && LA1_0 <= LPAREN)||LA1_0==MEASURE||LA1_0==NOT||LA1_0==ONE||LA1_0==PI||LA1_0==QUBIT||(LA1_0 >= REGISTER && LA1_0 <= RESET)||(LA1_0 >= RX && LA1_0 <= S)||(LA1_0 >= SIN && LA1_0 <= SQRT)||(LA1_0 >= STRING && LA1_0 <= TAN)||(LA1_0 >= TRUE && LA1_0 <= U3)||LA1_0==WHILE||(LA1_0 >= X && LA1_0 <= ZERO)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:19:7: statement
					{
					pushFollow(FOLLOW_statement_in_program92);
					statement1=statement();
					state._fsp--;

					stream_statement.add(statement1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program95);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 19:22: -> ^( PROGRAM ( statement )+ )
			{
				// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:19:25: ^( PROGRAM ( statement )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				if ( !(stream_statement.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_statement.hasNext() ) {
					adaptor.addChild(root_1, stream_statement.nextTree());
				}
				stream_statement.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:23:1: statement : ( qubitDecl SEMI !| bitDecl SEMI !| gateDecl | funcDecl | gateApply SEMI !| measureStmt SEMI !| resetStmt SEMI !| controlFlow | expr SEMI !);
	public final QuantumParser.statement_return statement() throws RecognitionException {
		QuantumParser.statement_return retval = new QuantumParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMI4=null;
		Token SEMI6=null;
		Token SEMI10=null;
		Token SEMI12=null;
		Token SEMI14=null;
		Token SEMI17=null;
		ParserRuleReturnScope qubitDecl3 =null;
		ParserRuleReturnScope bitDecl5 =null;
		ParserRuleReturnScope gateDecl7 =null;
		ParserRuleReturnScope funcDecl8 =null;
		ParserRuleReturnScope gateApply9 =null;
		ParserRuleReturnScope measureStmt11 =null;
		ParserRuleReturnScope resetStmt13 =null;
		ParserRuleReturnScope controlFlow15 =null;
		ParserRuleReturnScope expr16 =null;

		Object SEMI4_tree=null;
		Object SEMI6_tree=null;
		Object SEMI10_tree=null;
		Object SEMI12_tree=null;
		Object SEMI14_tree=null;
		Object SEMI17_tree=null;

		try {
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:24:5: ( qubitDecl SEMI !| bitDecl SEMI !| gateDecl | funcDecl | gateApply SEMI !| measureStmt SEMI !| resetStmt SEMI !| controlFlow | expr SEMI !)
			int alt2=9;
			switch ( input.LA(1) ) {
			case QUBIT:
				{
				alt2=1;
				}
				break;
			case REGISTER:
				{
				alt2=1;
				}
				break;
			case BIT:
				{
				alt2=2;
				}
				break;
			case GATE:
				{
				alt2=3;
				}
				break;
			case FUNC:
				{
				alt2=4;
				}
				break;
			case CCX:
			case CNOT:
			case CSWAP:
			case H:
			case ISWAP:
			case RX:
			case RY:
			case RZ:
			case S:
			case SWAP:
			case T:
			case U1:
			case U2:
			case U3:
			case X:
			case Y:
			case Z:
				{
				alt2=5;
				}
				break;
			case MEASURE:
				{
				alt2=6;
				}
				break;
			case RESET:
				{
				alt2=7;
				}
				break;
			case BREAK:
			case CONTINUE:
			case FOR:
			case IF:
			case WHILE:
				{
				alt2=8;
				}
				break;
			case CHAR:
			case COS:
			case EULER:
			case EXP:
			case FALSE:
			case FLOAT:
			case ID:
			case INT:
			case LOG:
			case LPAREN:
			case NOT:
			case ONE:
			case PI:
			case SIN:
			case SQRT:
			case STRING:
			case TAN:
			case TRUE:
			case ZERO:
				{
				alt2=9;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:24:7: qubitDecl SEMI !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_qubitDecl_in_statement122);
					qubitDecl3=qubitDecl();
					state._fsp--;

					adaptor.addChild(root_0, qubitDecl3.getTree());

					SEMI4=(Token)match(input,SEMI,FOLLOW_SEMI_in_statement124); 
					}
					break;
				case 2 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:25:7: bitDecl SEMI !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_bitDecl_in_statement133);
					bitDecl5=bitDecl();
					state._fsp--;

					adaptor.addChild(root_0, bitDecl5.getTree());

					SEMI6=(Token)match(input,SEMI,FOLLOW_SEMI_in_statement135); 
					}
					break;
				case 3 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:26:7: gateDecl
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_gateDecl_in_statement144);
					gateDecl7=gateDecl();
					state._fsp--;

					adaptor.addChild(root_0, gateDecl7.getTree());

					}
					break;
				case 4 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:27:7: funcDecl
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_funcDecl_in_statement152);
					funcDecl8=funcDecl();
					state._fsp--;

					adaptor.addChild(root_0, funcDecl8.getTree());

					}
					break;
				case 5 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:28:7: gateApply SEMI !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_gateApply_in_statement160);
					gateApply9=gateApply();
					state._fsp--;

					adaptor.addChild(root_0, gateApply9.getTree());

					SEMI10=(Token)match(input,SEMI,FOLLOW_SEMI_in_statement162); 
					}
					break;
				case 6 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:29:7: measureStmt SEMI !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_measureStmt_in_statement171);
					measureStmt11=measureStmt();
					state._fsp--;

					adaptor.addChild(root_0, measureStmt11.getTree());

					SEMI12=(Token)match(input,SEMI,FOLLOW_SEMI_in_statement173); 
					}
					break;
				case 7 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:30:7: resetStmt SEMI !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_resetStmt_in_statement182);
					resetStmt13=resetStmt();
					state._fsp--;

					adaptor.addChild(root_0, resetStmt13.getTree());

					SEMI14=(Token)match(input,SEMI,FOLLOW_SEMI_in_statement184); 
					}
					break;
				case 8 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:31:7: controlFlow
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_controlFlow_in_statement193);
					controlFlow15=controlFlow();
					state._fsp--;

					adaptor.addChild(root_0, controlFlow15.getTree());

					}
					break;
				case 9 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:32:7: expr SEMI !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_expr_in_statement201);
					expr16=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr16.getTree());

					SEMI17=(Token)match(input,SEMI,FOLLOW_SEMI_in_statement203); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class qubitDecl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "qubitDecl"
	// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:36:1: qubitDecl : ( QUBIT ^ ID | REGISTER ^ ID LBRACK ! INT RBRACK !);
	public final QuantumParser.qubitDecl_return qubitDecl() throws RecognitionException {
		QuantumParser.qubitDecl_return retval = new QuantumParser.qubitDecl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token QUBIT18=null;
		Token ID19=null;
		Token REGISTER20=null;
		Token ID21=null;
		Token LBRACK22=null;
		Token INT23=null;
		Token RBRACK24=null;

		Object QUBIT18_tree=null;
		Object ID19_tree=null;
		Object REGISTER20_tree=null;
		Object ID21_tree=null;
		Object LBRACK22_tree=null;
		Object INT23_tree=null;
		Object RBRACK24_tree=null;

		try {
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:37:5: ( QUBIT ^ ID | REGISTER ^ ID LBRACK ! INT RBRACK !)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==QUBIT) ) {
				alt3=1;
			}
			else if ( (LA3_0==REGISTER) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:37:7: QUBIT ^ ID
					{
					root_0 = (Object)adaptor.nil();


					QUBIT18=(Token)match(input,QUBIT,FOLLOW_QUBIT_in_qubitDecl222); 
					QUBIT18_tree = (Object)adaptor.create(QUBIT18);
					root_0 = (Object)adaptor.becomeRoot(QUBIT18_tree, root_0);

					ID19=(Token)match(input,ID,FOLLOW_ID_in_qubitDecl225); 
					ID19_tree = (Object)adaptor.create(ID19);
					adaptor.addChild(root_0, ID19_tree);

					}
					break;
				case 2 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:38:7: REGISTER ^ ID LBRACK ! INT RBRACK !
					{
					root_0 = (Object)adaptor.nil();


					REGISTER20=(Token)match(input,REGISTER,FOLLOW_REGISTER_in_qubitDecl264); 
					REGISTER20_tree = (Object)adaptor.create(REGISTER20);
					root_0 = (Object)adaptor.becomeRoot(REGISTER20_tree, root_0);

					ID21=(Token)match(input,ID,FOLLOW_ID_in_qubitDecl267); 
					ID21_tree = (Object)adaptor.create(ID21);
					adaptor.addChild(root_0, ID21_tree);

					LBRACK22=(Token)match(input,LBRACK,FOLLOW_LBRACK_in_qubitDecl269); 
					INT23=(Token)match(input,INT,FOLLOW_INT_in_qubitDecl272); 
					INT23_tree = (Object)adaptor.create(INT23);
					adaptor.addChild(root_0, INT23_tree);

					RBRACK24=(Token)match(input,RBRACK,FOLLOW_RBRACK_in_qubitDecl274); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "qubitDecl"


	public static class bitDecl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "bitDecl"
	// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:41:1: bitDecl : ( BIT ^ ID | REGISTER ^ ID LBRACK ! INT RBRACK !);
	public final QuantumParser.bitDecl_return bitDecl() throws RecognitionException {
		QuantumParser.bitDecl_return retval = new QuantumParser.bitDecl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BIT25=null;
		Token ID26=null;
		Token REGISTER27=null;
		Token ID28=null;
		Token LBRACK29=null;
		Token INT30=null;
		Token RBRACK31=null;

		Object BIT25_tree=null;
		Object ID26_tree=null;
		Object REGISTER27_tree=null;
		Object ID28_tree=null;
		Object LBRACK29_tree=null;
		Object INT30_tree=null;
		Object RBRACK31_tree=null;

		try {
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:42:5: ( BIT ^ ID | REGISTER ^ ID LBRACK ! INT RBRACK !)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==BIT) ) {
				alt4=1;
			}
			else if ( (LA4_0==REGISTER) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:42:7: BIT ^ ID
					{
					root_0 = (Object)adaptor.nil();


					BIT25=(Token)match(input,BIT,FOLLOW_BIT_in_bitDecl300); 
					BIT25_tree = (Object)adaptor.create(BIT25);
					root_0 = (Object)adaptor.becomeRoot(BIT25_tree, root_0);

					ID26=(Token)match(input,ID,FOLLOW_ID_in_bitDecl303); 
					ID26_tree = (Object)adaptor.create(ID26);
					adaptor.addChild(root_0, ID26_tree);

					}
					break;
				case 2 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:43:7: REGISTER ^ ID LBRACK ! INT RBRACK !
					{
					root_0 = (Object)adaptor.nil();


					REGISTER27=(Token)match(input,REGISTER,FOLLOW_REGISTER_in_bitDecl344); 
					REGISTER27_tree = (Object)adaptor.create(REGISTER27);
					root_0 = (Object)adaptor.becomeRoot(REGISTER27_tree, root_0);

					ID28=(Token)match(input,ID,FOLLOW_ID_in_bitDecl347); 
					ID28_tree = (Object)adaptor.create(ID28);
					adaptor.addChild(root_0, ID28_tree);

					LBRACK29=(Token)match(input,LBRACK,FOLLOW_LBRACK_in_bitDecl349); 
					INT30=(Token)match(input,INT,FOLLOW_INT_in_bitDecl352); 
					INT30_tree = (Object)adaptor.create(INT30);
					adaptor.addChild(root_0, INT30_tree);

					RBRACK31=(Token)match(input,RBRACK,FOLLOW_RBRACK_in_bitDecl354); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "bitDecl"


	public static class gateDecl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "gateDecl"
	// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:47:1: gateDecl : GATE ^ ID LPAREN ! ( paramList )? RPAREN ! block ;
	public final QuantumParser.gateDecl_return gateDecl() throws RecognitionException {
		QuantumParser.gateDecl_return retval = new QuantumParser.gateDecl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token GATE32=null;
		Token ID33=null;
		Token LPAREN34=null;
		Token RPAREN36=null;
		ParserRuleReturnScope paramList35 =null;
		ParserRuleReturnScope block37 =null;

		Object GATE32_tree=null;
		Object ID33_tree=null;
		Object LPAREN34_tree=null;
		Object RPAREN36_tree=null;

		try {
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:48:5: ( GATE ^ ID LPAREN ! ( paramList )? RPAREN ! block )
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:48:7: GATE ^ ID LPAREN ! ( paramList )? RPAREN ! block
			{
			root_0 = (Object)adaptor.nil();


			GATE32=(Token)match(input,GATE,FOLLOW_GATE_in_gateDecl381); 
			GATE32_tree = (Object)adaptor.create(GATE32);
			root_0 = (Object)adaptor.becomeRoot(GATE32_tree, root_0);

			ID33=(Token)match(input,ID,FOLLOW_ID_in_gateDecl384); 
			ID33_tree = (Object)adaptor.create(ID33);
			adaptor.addChild(root_0, ID33_tree);

			LPAREN34=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_gateDecl386); 
			// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:48:24: ( paramList )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==ID) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// C:\\Users\\megan\\workspace\\LFC\\src\\quantumCompilerPackage\\QuantumParser.g:48:24: paramList
					{
					pushFollow(FOLLOW_paramList_in_gateDecl389);
					paramList35=paramList();
					state._fsp--;

					adaptor.addChild(root_0, paramList35.getTree());

					}
					break;

			}

			RPAREN36=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_gateDecl392); 
			pushFollow(FOLLOW_block_in_gateDecl395);
			block37=block();
			state._fsp--;

			adaptor.addChild(root_0, block37.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "gateDecl"


	public static class funcDecl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funcDecl"
